<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".DataActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DAFTAR ANGGOTA UKMBS 2022"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_marginBottom="25dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_margin="40dp">

        <TableRow
            android:background="@color/black">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/coll"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/coll2"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/coll3"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1Nama"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ang20"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/psdm"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row2Nama"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ang21"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/komin"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row3Nama"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ang21"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/komin"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row4Nama"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ang21"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/komin"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row5Nama"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ang20"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sosma"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row6Nama"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ang21"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sosma"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row7Nama"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ang20"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/psdm"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row8Nama"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ang20"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/litbang"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row9Nama"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ang21"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/psdm"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row10Nama"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ang20"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/komin"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row11Nama"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ang20"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/danus"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row12Nama"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ang21"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/danus"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>

    </TableLayout>


</RelativeLayout>